--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -263,8 +263,8 @@
             </div>
 
 
-            <a id="survey" class="panel-footer btn btn-danger btn-sm" href="https://www.surveymonkey.co.uk/r/VKXG7PP">
-                <div class="side-button"><strong>Let Us Know What You Think</strong></div>
+            <a id="survey" class="panel-footer btn btn-danger btn-sm" href="https://www.surveymonkey.co.uk/r/R6PJ353">
+                <div class="side-button"><strong>Quick Survey</strong></div>
             </a>
 
             @content
