--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -146,21 +146,21 @@
 
 
         <section id="our-mission" class="feature-alt">
-            <div class="container about-us-section h-100">
-                <div class="card about-us-section">
-                    <div class="card-header text-center">
-                        <h4>Our Mission</h4>
-                    </div>
-                    <div class="card-body">
-                        <blockquote class="blockquote mb-0 text-center text-info">
+            <div class="container h-100">
+                @*<div class="card our-mission-card">*@
+                    @*<div class="card-header text-center">*@
+                        <h2 class="text-light text-center">Our Mission</h2>
+                    @*</div>*@
+                    @*<div class="card-body">*@
+                        <blockquote class="blockquote mb-0 text-light text-center our-mission-quote">
                             <p class="mission-quote">
                                 To provide teachers in Scotland with cutting edge software to considerably reduce the
                                 time they spend planning ... </p>
                             <p class="mission-quote">... allowing them more ‘<strong>Time to Teach</strong>’.</p>
 
                         </blockquote>
-                    </div>
-                </div>
+                    @*</div>*@
+                @*</div>*@
             </div>
         </section>
 
