--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -297,10 +297,22 @@ img {
 }
 
 #our-mission{
-    padding-top: 15rem;
+    padding-top: 12rem;
+    padding-bottom: 1rem;
     height: 100%;
+    background-image: url('/assets/images/mission.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-color: ghostwhite;
+
 }
 
+.our-mission-quote{
+    margin-top: 5rem;
+}
+.our-mission-card {
+    /*opacity: 0.5;*/
+}
 .mission-quote {
     padding-top: 1.5rem;
 }
