--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -25,11 +25,6 @@
                     a.appendChild(r);
                 })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
         </script>
-        <script>(function (t, e, s, o) {
-            var n, c, l;
-            t.SMCX = t.SMCX || [], e.getElementById(o) || (n = e.getElementsByTagName(s), c = n[n.length - 1], l = e.createElement(s), l.type = "text/javascript", l.async = !0, l.id = o, l.src = ["https:" === location.protocol ? "https://" : "http://", "widget.surveymonkey.com/collect/website/js/tRaiETqnLgj758hTBazgdxpg8vYGqkSwI8r6XxqwmV5R6_2FuuNhBlNJmxihgx5av5.js"].join(""), c.parentNode.insertBefore(l, c))
-        })(window, document, "script", "smcx-sdk");</script>
-
     </head>
     <body>
 
@@ -147,20 +142,13 @@
 
         <section id="our-mission" class="feature-alt">
             <div class="container h-100">
-                @*<div class="card our-mission-card">*@
-                    @*<div class="card-header text-center">*@
-                        <h2 class="text-light text-center">Our Mission</h2>
-                    @*</div>*@
-                    @*<div class="card-body">*@
-                        <blockquote class="blockquote mb-0 text-light text-center our-mission-quote">
-                            <p class="mission-quote">
-                                To provide teachers in Scotland with cutting edge software to considerably reduce the
-                                time they spend planning ... </p>
-                            <p class="mission-quote">... allowing them more ‘<strong>Time to Teach</strong>’.</p>
-
-                        </blockquote>
-                    @*</div>*@
-                @*</div>*@
+                <h1 class="text-light text-center chalk-writing "><strong>Our Mission</strong></h1>
+                <blockquote class="blockquote mb-0 text-center our-mission-quote ">
+                    <h1 class="mission-quote text-light chalk-writing">
+                        To provide teachers in Scotland with cutting edge software to considerably reduce the
+                        time they spend planning ... </h1>
+                    <h1 class="mission-quote text-light chalk-writing">... allowing them more ‘<strong >Time to Teach</strong>’.</h1>
+                </blockquote>
             </div>
         </section>
 
@@ -576,8 +564,6 @@
         </section>
 
 
-
-
         <section class="feature-alt about-us-section">
             <div class="container">
                 <div class="row">
@@ -599,7 +585,7 @@
 
                                     Andy knew that it was entirely feasible to create
                                     software which would automate planning for teachers, however we knew it was a big project.
-                                    He has now been building the software since August 2017 and we are on schedule to have it ready by August 2018.&ldquo;
+                                    He has now been building the software since September 2017 and we are on schedule to have it ready by August 2018.&ldquo;
                                     <footer class="blockquote-footer text-dark">
                                         Yvonne
                                     </footer>
@@ -670,7 +656,6 @@
                 </div>
             </div>
         </section>
-
 
 
         <section id="pricing" >
