--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -309,7 +309,7 @@ img {
     padding-top: 12rem;
     padding-bottom: 1rem;
     height: 100%;
-    background-image: url('/assets/images/mission.jpg');
+    background-image: url('/assets/images/mission-bk.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-color: ghostwhite;
