--- a/server/app/views/timetoteachDashboard.scala.html
+++ b/server/app/views/timetoteachDashboard.scala.html
@@ -42,7 +42,9 @@
 } {
 
     <section id="dashboardContent">
+
         <div class="container">
+
             <div class="row">
                 <div class="col-md-5 dashboardFadedBackground text-center">
                     <h3 class="display-5 text-center">Planning</h3>
@@ -91,6 +93,14 @@
                 </div>
             </div>
         </div>
+
+        <div class="row d-flex justify-content-center facebook-group-join-dashboard">
+            <a id="facebook-group-button" class="btn btn-primary btn-lg text-center" href="https://www.facebook.com/groups/305966139892476/">
+                <img class="facebook-group-icon" src="@routes.Assets.versioned("icons/FB-f-Logo__white_29.png")" alt="logo" height="22">
+                Join Our Facebook Group
+            </a>
+        </div>
+
     </section>
 
     <script>
