--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -76,7 +76,7 @@
                         <a class="btn btn-outline-primary" href="@routes.UserSignupController.signupStep1()">Sign Up</a>
                     </li>
                     <li class="nav-item nav-login-button">
-                        <a class="btn btn-primary" href="https://www.facebook.com/groups/305966139892476/">
+                        <a class="btn btn-outline-primary" href="https://www.facebook.com/groups/305966139892476/">
                             <img src="@routes.Assets.versioned("icons/FB-f-Logo__blue_29.png")" alt="logo" height="19">
                             Join Our Facebook Group</a>
                     </li>
@@ -105,7 +105,11 @@
                 <p>Designed specifically for the Scottish Curriculum for Excellence</p>
                 <br>
                 <p>
-                    <a href="https://www.surveymonkey.co.uk/r/R6PJ353" class="btn btn-lg btn-danger ">2 Minute Survey</a>
+                    <a href="https://www.surveymonkey.co.uk/r/R6PJ353" class="btn btn-lg btn-danger">
+                        2 Minute Survey
+                            <br>
+                            <span><small><em>On the need for a planning tool</em></small></span>
+                    </a>
                 </p>
                 <p>
                     <a href="@routes.UserSignupController.signupStep1()" class="btn btn-lg btn-success">Sign Up</a>
