--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -624,7 +624,7 @@
             </div>
         </section>
 
-        <section class="about-us-section">
+        <section id="the-evidence-section" class="about-us-section in-app-menu-medium-and-up">
             <div class="container">
                 <div class="row">
                     <div id="the-evidence-div">
