--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -94,9 +94,11 @@
                                 <span aria-hidden="true">&times;</span>
                             </button>
                             <strong>Note:</strong>
-                            This app is aimed for larger screens presently to test the flow. The current mobile version
-                            is inconsistent and lacks certain functionality, but will be improved going forward.
-                        </p>
+                            This app is currently aimed for larger - i.e. netbook, laptop, desktop - screens.</p>
+
+                        <p>The current mobile version is inconsistent and lacks certain functionality, but will be improved going forward.</p>
+                        <p>To test out the flow and see the potential, it is recommended to use a larger screen based device</p>
+
                     </div>
                 </div>
 
@@ -107,16 +109,16 @@
                 <p>
                     <a href="https://www.surveymonkey.co.uk/r/R6PJ353" class="btn btn-lg btn-danger">
                         2 Minute Survey
-                            <br>
-                            <span><small><em>On the need for a planning tool</em></small></span>
+                        <br>
+                        <span><small><em>On the need for a planning tool</em></small></span>
                     </a>
                 </p>
                 <p>
                     <a href="@routes.UserSignupController.signupStep1()" class="btn btn-lg btn-success">Sign Up</a>
                 </p>
                 @*<a id="facebook-group-button" class="btn btn-primary btn-lg" href="https://www.facebook.com/groups/305966139892476/">*@
-                    @*<img class="facebook-group-icon" src="@routes.Assets.versioned("icons/FB-f-Logo__white_29.png")" alt="logo" height="22">*@
-                    @*Join Our Facebook Group*@
+                @*<img class="facebook-group-icon" src="@routes.Assets.versioned("icons/FB-f-Logo__white_29.png")" alt="logo" height="22">*@
+                @*Join Our Facebook Group*@
                 @*</a>*@
 
             </div>
