--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -106,6 +106,7 @@
                 <h2 id="ttt-h5-front-page" class="display-5">Easy planning for busy primary teachers</h2>
                 <p>Designed specifically for the Scottish Curriculum for Excellence</p>
                 <br>
+
                 <p>
                     <a href="https://www.surveymonkey.co.uk/r/R6PJ353" class="btn btn-lg btn-danger">
                         2 Minute Survey
@@ -510,6 +511,35 @@
 
                 <p class="lead">
                     We have designed an online tool to reduce the time you spend planning and allow you to spend more time on the things that really matter to you.</p>
+
+
+                <div id="what-our-product-will-contain">
+                    <div class="col-md-3"></div>
+                    <div class="col-md-6">
+                        <h6 class="text-primary">What our final product will contain:</h6>
+                        <ul>
+                            <li>Yearly class timetable</li>
+                            <li>Termly Planning of all subject areas</li>
+                            <li>Download pdf of plans</li>
+                            <li>Es and Os/benchmarks from termly planning transferred to weekly plans</li>
+                            <li>Lesson plan templates</li>
+                            <li>IDL topic planning facility - ability to share ideas</li>
+                        </ul>
+
+                        <div class="what-our-product-will-contain-grouping">
+                            <h6 class="text-primary">Ideas for the future:</h6>
+                            <ul>
+                                <li>Tracking and assessment</li>
+                                <li>Communicate lessons covered to parents weekly via social media</li>
+                                <li>Reminders of upcoming dates/holidays</li>
+                                <li>School noticeboard - communciation</li>
+                                <li>And much more - based on your feedback & suggestions</li>
+                            </ul>
+                            <h4 class="text-success">Imagination is the limit!</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-3"></div>
+                </div>
 
             </div>
         </section>
