--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -154,10 +154,7 @@
                 <h1 class="text-light text-center chalk-writing "><strong>Our Mission</strong></h1>
                 <blockquote class="blockquote mb-0 text-center our-mission-quote ">
                     <h1 class="mission-quote text-light chalk-writing">
-                        To provide teachers in Scotland with cutting edge software to considerably reduce the
-                        time they spend planning ... </h1>
-                    <h1 class="mission-quote text-light chalk-writing">... allowing them more ‘<strong >Time to Teach</strong>
-                        ’.</h1>
+                        Helping teachers achieve a <strong>life</strong>-work balance!</h1>
                 </blockquote>
             </div>
         </section>
