--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -156,6 +156,10 @@
                     <h1 class="mission-quote text-light chalk-writing">
                         Helping teachers achieve a <strong>life</strong>-work balance!</h1>
                 </blockquote>
+
+                <div class="smiley-face d-flex justify-content-center ">
+                    <img src="@routes.Assets.versioned("images/mrSmileyFace.png")"  alt="Happy Face" height="128px" >
+                </div>
             </div>
         </section>
 
