--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -695,6 +695,9 @@ img {
     margin-top: 2rem;
 }
 
+.smiley-face{
+    margin-top: 5rem;
+}
 #class-timetable-clear-cancel-save-buttons {
     display: none;
 }
