--- a/server/app/views/planning/classtimetables/classesHome.scala.html
+++ b/server/app/views/planning/classtimetables/classesHome.scala.html
@@ -83,9 +83,7 @@
                           <div class="mx-auto">
                            <div class="col-sm-12 col-md-10 col-xl-8">
                             <button class="rounded btn btn-outline-info teachers-classes-btn teachers-classes-goto-btn"
-                            data-class-id="@classDetail.id.id" role="button"
-                            tabindex="0" data-toggle="popover" data-trigger="focus" data-placement="top"
-                            title="Next" data-content="Click here to add maths, literacy groups & set CfE levels">
+                            data-class-id="@classDetail.id.id" role="button">
                                 Go To Class</button>
                            </div>
                           </div>
