--- a/server/app/views/askInitialPreferences.scala.html
+++ b/server/app/views/askInitialPreferences.scala.html
@@ -68,10 +68,22 @@
                     </div>
                 </div>
 
+
                 <div class="form-submit-button text-center">
                     <button type="submit" class="btn btn-primary btn-lg">Submit</button>
                 </div>
+
             </form>
+
+            <div class="alert alert-info alert-dismissible fade show wee-margin-top" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <p class="lead">
+                    In the full release, you will be able to change the times for each class, rather than at the school level.
+                </p>
+            </div>
+
         </section>
     </div>
 
