--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -14,6 +14,9 @@
     src: url('/assets/fonts/dkCrayonCrumble.ttf') format('truetype');
 }
 
+.wee-margin-top{
+    margin-top: 3rem;
+}
 .smiley-face{
     margin-top: 5rem;
 }
