--- a/server/app/views/planning/classtimetables/classesHome.scala.html
+++ b/server/app/views/planning/classtimetables/classesHome.scala.html
@@ -82,7 +82,7 @@
                          <div class="row">
                           <div class="mx-auto">
                            <div class="col-sm-12 col-md-10 col-xl-8">
-                            <button class="rounded btn btn-outline-info teachers-classes-btn teachers-classes-goto-btn"
+                            <button class="rounded btn btn-success teachers-classes-btn teachers-classes-goto-btn"
                             data-class-id="@classDetail.id.id" role="button">
                                 Go To Class</button>
                            </div>
