--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -115,7 +115,11 @@
                     </a>
                 </p>
                 <p>
-                    <a href="@routes.UserSignupController.signupStep1()" class="btn btn-lg btn-success">Sign Up</a>
+                    <a href="@routes.UserSignupController.signupStep1()" class="btn btn-lg btn-success ">
+                        Login / Create Account
+                            <br>
+                            <span><small><em>and test the beta site</em></small></span>
+                    </a>
                 </p>
                 @*<a id="facebook-group-button" class="btn btn-primary btn-lg" href="https://www.facebook.com/groups/305966139892476/">*@
                 @*<img class="facebook-group-icon" src="@routes.Assets.versioned("icons/FB-f-Logo__white_29.png")" alt="logo" height="22">*@
