--- a/server/app/views/login.scala.html
+++ b/server/app/views/login.scala.html
@@ -94,7 +94,7 @@
                                         Note: This prevents you creating yet another new password in the world to remember! Or worse, using the same one again ;-)
                                     </p>
                                     <p>
-                                        We only use the social id for identity and nothing more (e.g. access to
+                                        We only use the social id for identity and nothing more (e.g. We have no access to
                                         friends, tweets, posts etc)
                                     </p>
                                 </div>
