--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -107,20 +107,15 @@
                 <p>Designed specifically for the Scottish Curriculum for Excellence</p>
                 <br>
 
-                <p>
-                    <a href="https://www.surveymonkey.co.uk/r/R6PJ353" class="btn btn-lg btn-danger">
-                        2 Minute Survey
-                        <br>
-                        <span><small><em>On the need for a planning tool</em></small></span>
-                    </a>
-                </p>
-                <p>
-                    <a href="@routes.UserSignupController.signupStep1()" class="btn btn-lg btn-success ">
-                        Login / Create Account
-                            <br>
-                            <span><small><em>and test the beta site</em></small></span>
-                    </a>
-                </p>
+
+                <div class="col-md-6 mx-auto">
+                    <p>
+                        <a href="@routes.UserSignupController.signupStep1()" class="btn btn-lg btn-danger btn-block">
+                            Create Test Account
+                        </a>
+                    </p>
+                </div>
+
                 @*<a id="facebook-group-button" class="btn btn-primary btn-lg" href="https://www.facebook.com/groups/305966139892476/">*@
                 @*<img class="facebook-group-icon" src="@routes.Assets.versioned("icons/FB-f-Logo__white_29.png")" alt="logo" height="22">*@
                 @*Join Our Facebook Group*@
@@ -161,9 +156,6 @@
                         Helping teachers achieve a <strong>life</strong>-work balance!</h1>
                 </blockquote>
 
-                <div class="smiley-face d-flex justify-content-center ">
-                    <img src="@routes.Assets.versioned("images/mrSmileyFace.png")"  alt="Happy Face" height="128px" >
-                </div>
             </div>
         </section>
 
