--- a/server/app/views/planning/classtimetables/classesHome.scala.html
+++ b/server/app/views/planning/classtimetables/classesHome.scala.html
@@ -3,7 +3,7 @@
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classes: List[ClassDetails], schoolsForTeacher: List[models.timetoteach.School])
 
 @timetoteachAppMain(handler, s"Classes Home",
- userPictureUri, userFirstName, userFamilyName, None, None, None) {
+    userPictureUri, userFirstName, userFamilyName, None, None, None) {
     <div class="in-app-menu-small-devices">
         <li class="nav-item nav-login-button">
             <a class="btn btn-outline-primary btn-block" role="button" href="@routes.Application.timeToTeachApp()">
@@ -15,106 +15,98 @@
                 Termly Plans Home</a>
         </li>
     </div>
-}{
+} {
 
- <div class="container">
+    <div class="container">
 
-     <div class="classes-home-section">
+        <div class="classes-home-section">
 
-         <div class="in-app-menu-medium-and-up">
-             <div class="d-flex">
-                 <ul class="nav mx-auto justify-content-between">
-                     <li class="nav-item manage-class-nav-item-leftmost">
-                         <a id="addNewClassBtn" class="rounded btn btn-success btn-lg manage-class-nav-item-rightmost"
-                         href="@controllers.planning.classtimetable.routes.ClassTimetableController.addNewClass()" role="button"
-                         tabindex="0" data-toggle="popover" data-trigger="focus" data-placement="right"
-                         title="Create a New Class" data-content="Click here to enter the name of your current class(es)">
-                             Create New Class</a>
-                     </li>
+            <ul class="nav nav-tabs" id="tabForHomeClasses" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link active" id="2017_2018-tab" data-toggle="tab" href="#2017_2018" role="tab" aria-controls="2017_2018" aria-selected="true">
+                        2017-2018</a>
+                </li>
+            </ul>
 
-                 </ul>
-             </div>
-         </div>
+            <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active teachers-classes" id="2017_2018" role="tabpanel" aria-labelledby="2017_2018-tab">
+                    <div class="">@if(classes.isEmpty) {
+                        <div class="teacher-classes-deck">
+                            <h5 class="noClassesMsg text-center">No classes created yet.</h5>
+                        </div>
+                    } else {
+                        <table class="table table-hover">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Class Name</th>
+                                    <th scope="col">School</th>
+                                    <th scope="col">Local Authority</th>
+                                    <th scope="col" class="text-right">Delete Class</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            @for((classDetail, index) <- classes.zipWithIndex) {
+                                <tr>
+                                    <th scope="row" class="text-primary teachers-classes-goto-th" data-class-id="@classDetail.id.id">
+                                        @classDetail.className.name
+                                    </th>
+                                    <td class="text-primary  teachers-classes-goto-td" data-class-id="@classDetail.id.id">
+                                        @classDetail.schoolDetails.name
+                                    </td>
+                                    <td class="text-primary  teachers-classes-goto-td" data-class-id="@classDetail.id.id">
+                                        @classDetail.schoolDetails.localAuthority.split(" ").map(elem => elem.toLowerCase.capitalize).mkString(" ")
+                                    </td>
 
-     <ul class="nav nav-tabs" id="tabForHomeClasses" role="tablist">
-         <li class="nav-item">
-             <a class="nav-link active" id="2017_2018-tab" data-toggle="tab" href="#2017_2018" role="tab" aria-controls="2017_2018" aria-selected="true">2017-2018</a>
-         </li>
-         <li class="nav-item">
-             <a class="nav-link" id="2016_2017-tab" data-toggle="tab" href="#2016_2017" role="tab" aria-controls="2016_2017" aria-selected="false">2016-2017</a>
-         </li>
-         <li class="nav-item">
-            <a class="nav-link" id="2015-2016-tab" data-toggle="tab" href="#2015_2016" role="tab" aria-controls="2015_2016" aria-selected="false">2015-2016</a>
-         </li>
-     </ul>
-
-     <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active teachers-classes" id="2017_2018" role="tabpanel" aria-labelledby="2017_2018-tab">
-            <div class="">@if(classes.isEmpty) {
-                <div class="teacher-classes-deck">
-                    <h5 class="noClassesMsg text-center">No classes created yet.</h5>
-                </div>
-            } else {
-                <div class="row">
-                    <div class="card-deck teacher-classes-deck">
-                        @for((classDetail, index) <- classes.zipWithIndex) {
-                            <div class=@if(classes.size > 1){
-                                    "col-xl-3 col-lg-4 col-md-6 col-sm-12"
-                                }else{
-                                    "col-5"
-                                }>
-                                <div class="card teacher-classes-card" >
-                                    <div class="card-header">
-                                        <span class="classNameCardHeader">@classDetail.className.name</span>
+                                    <td>
                                         <button type="button" class="close delete-teacher-class-btn"
-                                            data-class-id="@classDetail.id.id"
-                                            data-class-name="@classDetail.className.name"
-                                            data-user-id="@tttUserId.value">
-
+                                        data-class-id="@classDetail.id.id"
+                                        data-class-name="@classDetail.className.name"
+                                        data-user-id="@tttUserId.value">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
+                                    </td>
+                                </tr>
+                            }
+                            </tbody>
+                        </table>
 
-                        <p>@classDetail.schoolDetails.name, @classDetail.schoolDetails.localAuthority</p>
+
+
+
+                    }</div>
+
+                    <div class="in-app-menu-medium-and-up">
+                        <div class="d-flex">
+                            <ul class="nav mx-auto justify-content-between">
+                                <li class="nav-item manage-class-nav-item-leftmost">
+                                    <a id="addNewClassBtn" class="rounded btn btn-success manage-class-nav-item-rightmost"
+                                    href="@controllers.planning.classtimetable.routes.ClassTimetableController.addNewClass()" role="button">
+                                        Create New Class</a>
+                                </li>
+
+                            </ul>
                         </div>
-                        <img class="card-img-top" src="@routes.Assets.versioned(s"images/classes/classroom-${index + 1 % 5}.jpeg")"
-                        alt="Class Image" height="150px">
-                        <div class="card-body">
-                         <div class="row">
-                          <div class="mx-auto">
-                           <div class="col-sm-12 col-md-10 col-xl-8">
-                            <button class="rounded btn btn-success teachers-classes-btn teachers-classes-goto-btn"
-                            data-class-id="@classDetail.id.id" role="button">
-                                Go To Class</button>
-                           </div>
-                          </div>
-                         </div>
-                        </div>
-                       </div>
-                      </div>
-                      }
-                     </div>
                     </div>
-                 }</div>
-    </div>
-      <div class="tab-pane fade teachers-classes" id="2016_2017" role="tabpanel" aria-labelledby="2016_2017-tab">
-              <p class="noClassesMsg text-center">
-                  This is your class history for previous sessions. It may be useful for handovers or tracking info.
-              </p>
-      </div>
-      <div class="tab-pane fade teachers-classes" id="2015_2016" role="tabpanel" aria-labelledby="2015-2016-tab">
-          <div class="">
-              <p class="noClassesMsg text-center">
-                  This is your class history for previous sessions. It may be useful for handovers or tracking info.
-              </p>
-          </div>
-      </div>
-    </div>
+                </div>
+                <div class="tab-pane fade teachers-classes" id="2016_2017" role="tabpanel" aria-labelledby="2016_2017-tab">
+                    <p class="noClassesMsg text-center">
+                        This is your class history for previous sessions. It may be useful for handovers or tracking info.
+                    </p>
+                </div>
+                <div class="tab-pane fade teachers-classes" id="2015_2016" role="tabpanel" aria-labelledby="2015-2016-tab">
+                    <div class="">
+                        <p class="noClassesMsg text-center">
+                            This is your class history for previous sessions. It may be useful for handovers or tracking info.
+                        </p>
+                    </div>
+                </div>
+            </div>
 
 
-  <div id="divForModalAreYouSureWantToDeleteClass"></div>
+            <div id="divForModalAreYouSureWantToDeleteClass"></div>
 
+        </div>
     </div>
- </div>
 
     <script>
             $(function () {
@@ -125,6 +117,6 @@
             });
     </script>
 
- @scalajs.html.scripts("client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") != null)
+    @scalajs.html.scripts("client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") != null)
 }
 
