--- a/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
+++ b/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
@@ -44,12 +44,9 @@
                             Re-Select Curriculum Areas</a>
                     </div>
                     <div class="col-3">
-                        <a id="download-termly-plan-pdf" class="btn btn-sm btn-outline-danger btn-block bg-light" role="button"
-                        tabindex="0" data-toggle="popover" data-trigger="focus" data-placement="bottom"
-                        title="Create A PDF Of Your Termly Plan"
-                        data-content="Once you have selected all your Es & Os / Benchmarks, then click this button to generate a pdf version of your plan."
+                        <a id="download-termly-plan-pdf" class="btn btn-sm btn-danger btn-block" role="button"
                         href="@controllers.planning.termly.routes.DownloadPdfController.downloadClassPdf(classDetails.id.id)">
-                            Download Plan PDF</a>
+                            Create Plan PDF</a>
                     </div>
                 </div>
 
