--- a/server/app/views/planning/termly/termlyPlansHome.scala.html
+++ b/server/app/views/planning/termly/termlyPlansHome.scala.html
@@ -13,7 +13,7 @@
 
         <li class="nav-item nav-login-button">
             <a class="btn btn-outline-primary" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">
-                Classes Home</a>
+                My Classes</a>
         </li>
 
 
@@ -65,9 +65,6 @@
                             <div class="col-xs-0 col-lg-5 muted">@userFirstName @userFamilyName</div>
                             <div class="col-xs-3 col-lg-2">
                                 <a id="download-termly-plan-pdf" class="btn btn-sm btn-outline-danger btn-block bg-light" role="button"
-                                tabindex="0" data-toggle="popover" data-trigger="focus" data-placement="left"
-                                title="Create A PDF Of Your Termly Plan"
-                                data-content="Once you have selected all your Es & Os / Benchmarks, then click this button to generate a pdf version of your plan."
                                 href="@controllers.planning.termly.routes.DownloadPdfController.downloadClassPdf(teacherClass.id.id)">Download Plan PDF</a>
                             </div>
                         </div>
