--- a/server/app/views/timetoteachDashboard.scala.html
+++ b/server/app/views/timetoteachDashboard.scala.html
@@ -48,14 +48,10 @@
             <div class="row">
                 <div class="col-md-5 dashboardFadedBackground text-center">
                     <h3 class="display-5 text-center">Planning</h3>
-                    <a class="btn btn-primary btn-lg dashboard-button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()" role="button"
-                    tabindex="0" data-toggle="popover" data-trigger="focus" data-placement="right"
-                    title="Step 1" data-content="First thing to try is creating a new class, add some groups & create a timetable">
-                        Classes Home</a>
+                    <a class="btn btn-primary btn-lg dashboard-button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()" role="button">
+                        My Classes</a>
 
-                    <a class="btn btn-info btn-lg dashboard-button" href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlans()" role="button"
-                    tabindex="0" data-toggle="popover" data-trigger="focus" data-placement="bottom"
-                    title="Step 2" data-content="Then, you can select a few Es & Os plus benchmarks .... then generate a PDF version of your plan!">
+                    <a class="btn btn-info btn-lg dashboard-button" href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlans()" role="button">
                         Termly Plans</a>
 
                     <button type="button" disabled="true" class="btn btn-dark btn-lg dashboard-button">Weekly Plans</button>
