--- a/server/app/views/planning/classtimetables/manageClass.scala.html
+++ b/server/app/views/planning/classtimetables/manageClass.scala.html
@@ -72,13 +72,7 @@
                         <div id="mathematics-groups-section">
                         @for(group <- classDetails.groups.sortBy(group => group.groupLevel)) {
                             @if(group.groupType.value.toLowerCase == "mathematics") {
-                                <div class="manage-new-group-row"
-                                tabindex="0" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true"
-                                title="New group created!" data-content="After a group has been created, you can still
-                                edit the <strong class='text-primary'>group name</strong> and
-                                <strong class='text-primary'>group description</strong> and it will auto save.
-                                <br>
-                                <p>If you have selected an incorrect CfE level then at the moment just delete the group and re-create a new one.</p>">
+                                <div class="manage-new-group-row">
                                     <div class="form-row manage-class-group-row" data-group-id="@group.groupId.id" data-group-type="mathematics">
 
                                         <div class="row in-app-menu-small-devices in-app-menu-small-devices-row">
@@ -164,12 +158,7 @@
                         <div id="reading-groups-section">
                         @for(group <- classDetails.groups.sortBy(group => group.groupLevel)) {
                             @if(group.groupType.value.toLowerCase == "reading") {
-                                <div class="manage-new-group-row"
-                                tabindex="0" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true"
-                                title="New group created!" data-content="After a group has been created, you can still
-                                edit the <strong class='text-primary'>group name</strong> and <strong class='text-primary'>group description</strong> and it will auto save.
-                                <br>
-                                 <p>If you have selected an incorrect CfE level then at the moment just delete the group and re-create a new one.</p>">
+                                <div class="manage-new-group-row">
                                     <div class="form-row manage-class-group-row" data-group-id="@group.groupId.id" data-group-type="reading">
 
                                         <div class="row in-app-menu-small-devices in-app-menu-small-devices-row">
@@ -291,13 +280,7 @@
                         <div id="writing-groups-section">
                         @for(group <- classDetails.groups.sortBy(group => group.groupLevel)) {
                             @if(group.groupType.value.toLowerCase == "writing") {
-                                <div class="manage-new-group-row"
-                                tabindex="0" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true"
-                                title="New group created!" data-content="After a group has been created, you can still
-                                edit the <strong class='text-primary'>group name</strong> and
-                                <strong class='text-primary'>group description</strong> and it will auto save.
-                                <br>
-                                <p>If you have selected an incorrect CfE level then at the moment just delete the group and re-create a new one.</p>">
+                                <div class="manage-new-group-row">
                                     <div class="form-row manage-class-group-row" data-group-id="@group.groupId.id" data-group-type="writing">
 
                                         <div class="row in-app-menu-small-devices in-app-menu-small-devices-row">
@@ -386,14 +369,7 @@
                         <div id="spelling-groups-section">
                         @for(group <- classDetails.groups) {
                             @if(group.groupType.value.toLowerCase == "spelling") {
-                                <div class="manage-new-group-row"
-                                tabindex="0" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true"
-                                title="New group created!" data-content="After a group has been created, you can still
-                                edit the <strong class='text-primary'>group name</strong> and
-                                <strong class='text-primary'>group description</strong> and it will auto save.
-                                <br>
-                                <p>If you have selected an incorrect CfE level then at the moment just delete the
-                                group and re-create a new one.</p>">
+                                <div class="manage-new-group-row">
                                     <div class="form-row manage-class-group-row" data-group-id="@group.groupId.id" data-group-type="spelling">
 
                                         <div class="row in-app-menu-small-devices in-app-menu-small-devices-row">
